<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/text_size_titulo"/>
    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="@dimen/min_heigh"
        android:hint="@string/textoTitulo"/>

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="@dimen/text_size_titulo"/>
    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoDescripcion"
        android:inputType="text|textMultiLine"
        android:maxLines="4"
        android:minHeight="@dimen/min_heigh" />

    <TextView
        android:id="@+id/textViewCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="@dimen/text_size_titulo"/>
    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoCorreo"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/min_heigh" />

    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textSize="@dimen/text_size_titulo"/>
    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoPrecio"
        android:inputType="numberDecimal"
        android:minHeight="@dimen/min_heigh"/>

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textSize="@dimen/text_size_titulo"/>

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownWidth="wrap_content"
        android:dropDownSelector="@color/spinner"
        android:minHeight="@dimen/min_heigh"
        android:spinnerMode="dropdown"
        tools:ignore="SpeakableTextPresentCheck"
        />

    <Switch
        android:id="@+id/switchDescuentoEnvio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_heigh"
        android:text="@string/descuento" />

    <SeekBar
        android:id="@+id/seekBarDescuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:min="0"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewPorcentaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/porcentaje"
        android:visibility="gone"
        android:textSize="@dimen/text_size_titulo"/>

    <CheckBox
        android:id="@+id/checkBoxRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_heigh"
        android:text="@string/retiroEnPersona" />

    <TextView
        android:id="@+id/textViewDireccionRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direccionRetiro"
        android:visibility="gone"
        android:textSize="@dimen/text_size_titulo"/>

    <EditText
        android:id="@+id/editTextDireccionRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="@dimen/min_heigh"
        android:hint="@string/textoDireccionRetiro"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/checkBoxTerminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_heigh"
        android:text="@string/terminos" />

    <Button
        android:id="@+id/buttonPublicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicar"
        android:enabled="false"/>
</LinearLayout>